<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_TxRxMessage" Id="{72369b31-76a9-4dea-b41c-eeafa7f4883c}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'} 
TYPE ST_TxRxMessage :
STRUCT
	dataLength : UINT;
	cobId : UDINT;
	data : ARRAY[0..7] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>