<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_TxRxQueue" Id="{07b11b6a-263b-4031-9bc2-0b49e5050012}">
    <Declaration><![CDATA[TYPE ST_TxRxQueue :
STRUCT
	txCounter : UINT;
	rxCounter : UINT;
	noOfMessages : UINT;
	messages : ARRAY[0..9] OF ST_TxRxMessage;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>