<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_CANControl" Id="{b6b4773b-a627-490b-a885-78ecb679b4ff}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC FB_CANControl IMPLEMENTS ITF_CANControl
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	rxQueue AT%I* : ST_TxRxQueue;
	txQueue AT%Q* : ST_TxRxQueue;
	i : INT;
	messageRecieved : ST_TxRxMessage;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF rxQueue.rxCounter <> txQueue.rxCounter THEN
	//if we have recieved a message rxCounter is incremented by interface
	M_GetMessage();
END_IF
]]></ST>
    </Implementation>
    <Method Name="M_GetMessage" Id="{02c3fb95-bf7e-41ee-8cee-070b95293a0e}">
      <Declaration><![CDATA[METHOD PUBLIC M_GetMessage : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 0 TO rxQueue.noOfMessages DO
	messageRecieved := rxQueue.messages[i];
END_FOR
txQueue.rxCounter := rxQueue.rxCounter;]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_PushMessage" Id="{ad1aea3b-53ed-43f8-bbfd-97e7f8ab76b1}">
      <Declaration><![CDATA[METHOD PUBLIC M_PushMessage : BOOL
VAR_INPUT
	messageSend : ST_TxRxMessage;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF txQueue.txCounter = rxQueue.TxCounter THEN
	FOR i:=0 TO 1 DO
		txQueue.messages[i] := messageSend;
	End_for
	txQueue.noOfMessages := 1;
	txQueue.TxCounter := rxQueue.TxCounter + 1;
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_CANControl">
      <LineId Id="21" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="37" Count="0" />
    </LineIds>
    <LineIds Name="FB_CANControl.M_GetMessage">
      <LineId Id="6" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_CANControl.M_PushMessage">
      <LineId Id="9" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>